Update UI with images, content, and color scheme

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Tim Baker Development</title>
+    <title>Ben Arnold Development</title>
 </head>
 
   <body>
